// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table has clickable rows styles 1`] = `
.c2 {
  border-top: 1px solid #DBDEE1;
  background-color: #FFFFFF;
}

.c2:focus {
  position: relative;
}

.c2:focus::after {
  box-shadow: inset 0 0 0 2px #84C6EA,inset 0 0 0 3px #006296;
  content: '';
  height: calc(100% + 3px);
  left: 0;
  outline: none;
  position: absolute;
  top: -2px;
  width: 100%;
  z-index: 3;
}

.c2:hover {
  cursor: pointer;
}

.c2:hover td {
  background-color: #DBDEE1;
}

.c2:not(:hover) td {
  background-color: inherit;
}

.c1 {
  background-color: #FFFFFF;
  box-sizing: border-box;
}

.c0 {
  border-collapse: collapse;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  margin-left: 50%;
  min-width: var(--size-2halfx);
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: var(--size-2halfx);
}

<table
  class="c0"
>
  <thead>
    <tr
      class=""
    >
      <th
        class="c1"
        scope="col"
        style="text-align:left"
      >
        Column 1
      </th>
      <th
        class="c1"
        scope="col"
        style="text-align:left"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      class="c2"
      data-testid="table-row-0"
      role="button"
      tabindex="0"
    >
      <td
        class=""
        style="text-align:left"
      >
        Hello
      </td>
      <td
        class=""
        style="text-align:left"
      >
        World
      </td>
    </tr>
    <tr
      class="c2"
      data-testid="table-row-1"
      role="button"
      tabindex="0"
    >
      <td
        class=""
        style="text-align:left"
      >
        Hello
      </td>
      <td
        class=""
        style="text-align:left"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c2"
      data-testid="table-row-2"
      role="button"
      tabindex="0"
    >
      <td
        class=""
        style="text-align:left"
      >
        Hello
      </td>
      <td
        class=""
        style="text-align:left"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has custom text alignment 1`] = `
.c2 {
  border-top: 1px solid #DBDEE1;
  background-color: #FFFFFF;
}

.c2 td {
  background-color: inherit;
}

.c1 {
  background-color: #FFFFFF;
  box-sizing: border-box;
}

.c0 {
  border-collapse: collapse;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  margin-left: 50%;
  min-width: var(--size-2halfx);
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: var(--size-2halfx);
}

<table
  class="c0"
>
  <thead>
    <tr
      class=""
    >
      <th
        class="c1"
        scope="col"
        style="text-align:right"
      >
        Column 1
      </th>
      <th
        class="c1"
        scope="col"
        style="text-align:center"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      class="c2"
      data-testid="table-row-0"
    >
      <td
        class=""
        style="text-align:right"
      >
        Hello
      </td>
      <td
        class=""
        style="text-align:center"
      >
        World
      </td>
    </tr>
    <tr
      class="c2"
      data-testid="table-row-1"
    >
      <td
        class=""
        style="text-align:right"
      >
        Hello
      </td>
      <td
        class=""
        style="text-align:center"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c2"
      data-testid="table-row-2"
    >
      <td
        class=""
        style="text-align:right"
      >
        Hello
      </td>
      <td
        class=""
        style="text-align:center"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has desktop styles 1`] = `
.c2 {
  border-top: 1px solid #DBDEE1;
  background-color: #FFFFFF;
}

.c2 td {
  background-color: inherit;
}

.c1 {
  background-color: #FFFFFF;
  box-sizing: border-box;
}

.c0 {
  border-collapse: collapse;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  margin-left: 50%;
  min-width: var(--size-2halfx);
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: var(--size-2halfx);
}

<table
  class="c0"
>
  <thead>
    <tr
      class=""
    >
      <th
        class="c1"
        scope="col"
        style="text-align:left"
      >
        Column 1
      </th>
      <th
        class="c1"
        scope="col"
        style="text-align:left"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      class="c2"
      data-testid="table-row-0"
    >
      <td
        class=""
        style="text-align:left"
      >
        Hello
      </td>
      <td
        class=""
        style="text-align:left"
      >
        World
      </td>
    </tr>
    <tr
      class="c2"
      data-testid="table-row-1"
    >
      <td
        class=""
        style="text-align:left"
      >
        Hello
      </td>
      <td
        class=""
        style="text-align:left"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c2"
      data-testid="table-row-2"
    >
      <td
        class=""
        style="text-align:left"
      >
        Hello
      </td>
      <td
        class=""
        style="text-align:left"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has error rows styles 1`] = `
.c2 {
  border-top: 1px solid #DBDEE1;
  position: relative;
  background-color: #fcf8f9;
}

.c2::after {
  box-shadow: inset 0 0 0 1px #CD2C23;
  content: '';
  height: calc(100% + 1px);
  left: 0;
  outline: none;
  position: absolute;
  width: 100%;
  z-index: 3;
}

.c2 td:first-child::after {
  border-left: 1px solid #CD2C23;
  content: '';
  height: 100%;
  left: 0;
  position: absolute;
  top: 0;
  z-index: 3;
}

.c2 td {
  background-color: inherit;
}

.c3 {
  border-top: 1px solid #DBDEE1;
  background-color: #FFFFFF;
}

.c3 td {
  background-color: inherit;
}

.c1 {
  background-color: #FFFFFF;
  box-sizing: border-box;
}

.c0 {
  border-collapse: collapse;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  margin-left: 50%;
  min-width: var(--size-2halfx);
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: var(--size-2halfx);
}

<table
  class="c0"
>
  <thead>
    <tr
      class=""
    >
      <th
        class="c1"
        scope="col"
        style="text-align:left"
      >
        Column 1
      </th>
      <th
        class="c1"
        scope="col"
        style="text-align:left"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      class="c2"
      data-testid="table-row-0"
    >
      <td
        class=""
        style="text-align:left"
      >
        Hello
      </td>
      <td
        class=""
        style="text-align:left"
      >
        World
      </td>
    </tr>
    <tr
      class="c3"
      data-testid="table-row-1"
    >
      <td
        class=""
        style="text-align:left"
      >
        Hello
      </td>
      <td
        class=""
        style="text-align:left"
      >
        World
      </td>
    </tr>
    <tr
      class="c2"
      data-testid="table-row-2"
    >
      <td
        class=""
        style="text-align:left"
      >
        Hello
      </td>
      <td
        class=""
        style="text-align:left"
      >
        World
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has mobile styles 1`] = `
.c2 {
  border-top: 1px solid #DBDEE1;
  background-color: #FFFFFF;
}

.c2 td {
  background-color: inherit;
}

.c1 {
  background-color: #FFFFFF;
  box-sizing: border-box;
}

.c0 {
  border-collapse: collapse;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-2x) 0;
}

.c0 td {
  padding: var(--spacing-3x) 0;
}

.c0 th,
.c0 td {
  font-size: 1rem;
  line-height: 1.5rem;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  margin-left: 50%;
  min-width: var(--size-2halfx);
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: var(--size-2halfx);
}

<table
  class="c0"
>
  <thead>
    <tr
      class=""
    >
      <th
        class="c1"
        scope="col"
        style="text-align:left"
      >
        Column 1
      </th>
      <th
        class="c1"
        scope="col"
        style="text-align:left"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      class="c2"
      data-testid="table-row-0"
    >
      <td
        class=""
        style="text-align:left"
      >
        Hello
      </td>
      <td
        class=""
        style="text-align:left"
      >
        World
      </td>
    </tr>
    <tr
      class="c2"
      data-testid="table-row-1"
    >
      <td
        class=""
        style="text-align:left"
      >
        Hello
      </td>
      <td
        class=""
        style="text-align:left"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c2"
      data-testid="table-row-2"
    >
      <td
        class=""
        style="text-align:left"
      >
        Hello
      </td>
      <td
        class=""
        style="text-align:left"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has rowNumbers styles 1`] = `
.c2 {
  border-top: 1px solid #DBDEE1;
  background-color: #FFFFFF;
}

.c2 td {
  background-color: inherit;
}

.c1 {
  background-color: #FFFFFF;
  box-sizing: border-box;
}

.c0 {
  border-collapse: collapse;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  margin-left: 50%;
  min-width: var(--size-2halfx);
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: var(--size-2halfx);
}

<table
  class="c0"
>
  <thead>
    <tr
      class=""
    >
      <th
        class="c1"
        scope="col"
        style="text-align:left"
      />
      <th
        class="c1"
        scope="col"
        style="text-align:left"
      >
        Column 1
      </th>
      <th
        class="c1"
        scope="col"
        style="text-align:left"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      class="c2"
      data-testid="table-row-0"
    >
      <td
        class=""
        style="text-align:left"
      >
        <span
          class="eq-table__util-column"
        >
          1
        </span>
      </td>
      <td
        class=""
        style="text-align:left"
      >
        Hello
      </td>
      <td
        class=""
        style="text-align:left"
      >
        World
      </td>
    </tr>
    <tr
      class="c2"
      data-testid="table-row-1"
    >
      <td
        class=""
        style="text-align:left"
      >
        <span
          class="eq-table__util-column"
        >
          2
        </span>
      </td>
      <td
        class=""
        style="text-align:left"
      >
        Hello
      </td>
      <td
        class=""
        style="text-align:left"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c2"
      data-testid="table-row-2"
    >
      <td
        class=""
        style="text-align:left"
      >
        <span
          class="eq-table__util-column"
        >
          3
        </span>
      </td>
      <td
        class=""
        style="text-align:left"
      >
        Hello
      </td>
      <td
        class=""
        style="text-align:left"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has selectable rows styles 1`] = `
.c10 {
  border-top: 1px solid #DBDEE1;
  background-color: #FFFFFF;
}

.c10 td {
  background-color: inherit;
}

.c1 {
  background-color: #FFFFFF;
  box-sizing: border-box;
}

.c7 {
  color: #FFFFFF;
  display: none;
  height: 100%;
  left: 0;
  position: absolute;
  width: 100%;
}

.c9 {
  color: #FFFFFF;
  display: none;
  height: 100%;
  left: 0;
  position: absolute;
  width: 100%;
}

.c5 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  display: inline-block;
  height: var(--size-1x);
  left: 0;
  margin-right: var(--spacing-1x);
  position: relative;
  width: var(--size-1x);
}

.c5:hover {
  border: 1px solid #006296;
}

.c3 {
  height: 0;
  opacity: 0;
  position: absolute;
  width: 0;
}

.c3:checked + .c4 {
  background-color: #006296;
  border: 1px solid #006296;
}

.c3:checked + .c4 > .c6 {
  display: block;
}

.c3:indeterminate + .c4 {
  background-color: #006296;
  border: 1px solid #006296;
}

.c3:indeterminate + .c4 > .c8 {
  display: block;
}

.c3:focus + .c4 {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2:not(:first-of-type) {
  margin-top: var(--spacing-1x);
}

.c0 {
  border-collapse: collapse;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  margin-left: 50%;
  min-width: var(--size-2halfx);
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: var(--size-2halfx);
}

<table
  class="c0"
>
  <thead>
    <tr
      class=""
    >
      <th
        class="c1"
        scope="col"
        style="text-align:left"
      >
        <label
          class="c2"
        >
          <input
            class="c3"
            data-testid="row-checkbox-all"
            type="checkbox"
          />
          <span
            class="c4 c5"
          >
            <svg
              class="c6 c7"
              color="currentColor"
              focusable="false"
              height="24"
              width="24"
            />
            <svg
              class="c8 c9"
              color="currentColor"
              focusable="false"
              height="24"
              width="24"
            />
          </span>
        </label>
      </th>
      <th
        class="c1"
        scope="col"
        style="text-align:left"
      >
        Column 1
      </th>
      <th
        class="c1"
        scope="col"
        style="text-align:left"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      class="c10"
      data-testid="table-row-0"
    >
      <td
        class=""
        style="text-align:left"
      >
        <label
          class="c2"
        >
          <input
            class="c3"
            data-testid="row-checkbox-0"
            type="checkbox"
          />
          <span
            class="c4 c5"
          >
            <svg
              class="c6 c7"
              color="currentColor"
              focusable="false"
              height="24"
              width="24"
            />
            <svg
              class="c8 c9"
              color="currentColor"
              focusable="false"
              height="24"
              width="24"
            />
          </span>
        </label>
      </td>
      <td
        class=""
        style="text-align:left"
      >
        Hello
      </td>
      <td
        class=""
        style="text-align:left"
      >
        World
      </td>
    </tr>
    <tr
      class="c10"
      data-testid="table-row-1"
    >
      <td
        class=""
        style="text-align:left"
      >
        <label
          class="c2"
        >
          <input
            class="c3"
            data-testid="row-checkbox-1"
            type="checkbox"
          />
          <span
            class="c4 c5"
          >
            <svg
              class="c6 c7"
              color="currentColor"
              focusable="false"
              height="24"
              width="24"
            />
            <svg
              class="c8 c9"
              color="currentColor"
              focusable="false"
              height="24"
              width="24"
            />
          </span>
        </label>
      </td>
      <td
        class=""
        style="text-align:left"
      >
        Hello
      </td>
      <td
        class=""
        style="text-align:left"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c10"
      data-testid="table-row-2"
    >
      <td
        class=""
        style="text-align:left"
      >
        <label
          class="c2"
        >
          <input
            class="c3"
            data-testid="row-checkbox-2"
            type="checkbox"
          />
          <span
            class="c4 c5"
          >
            <svg
              class="c6 c7"
              color="currentColor"
              focusable="false"
              height="24"
              width="24"
            />
            <svg
              class="c8 c9"
              color="currentColor"
              focusable="false"
              height="24"
              width="24"
            />
          </span>
        </label>
      </td>
      <td
        class=""
        style="text-align:left"
      >
        Hello
      </td>
      <td
        class=""
        style="text-align:left"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has small rowSize styles 1`] = `
.c2 {
  border-top: 1px solid #DBDEE1;
  background-color: #FFFFFF;
}

.c2 td {
  background-color: inherit;
}

.c1 {
  background-color: #FFFFFF;
  box-sizing: border-box;
}

.c0 {
  border-collapse: collapse;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-half) var(--spacing-1x);
}

.c0 td {
  padding: var(--spacing-1x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  margin-left: 50%;
  min-width: var(--size-2halfx);
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: var(--size-2halfx);
}

<table
  class="c0"
>
  <thead>
    <tr
      class=""
    >
      <th
        class="c1"
        scope="col"
        style="text-align:left"
      >
        Column 1
      </th>
      <th
        class="c1"
        scope="col"
        style="text-align:left"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      class="c2"
      data-testid="table-row-0"
    >
      <td
        class=""
        style="text-align:left"
      >
        Hello
      </td>
      <td
        class=""
        style="text-align:left"
      >
        World
      </td>
    </tr>
    <tr
      class="c2"
      data-testid="table-row-1"
    >
      <td
        class=""
        style="text-align:left"
      >
        Hello
      </td>
      <td
        class=""
        style="text-align:left"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c2"
      data-testid="table-row-2"
    >
      <td
        class=""
        style="text-align:left"
      >
        Hello
      </td>
      <td
        class=""
        style="text-align:left"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has sorting styles 1`] = `
.c3 {
  border-top: 1px solid #DBDEE1;
  background-color: #FFFFFF;
}

.c3 td {
  background-color: inherit;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: var(--spacing-1x);
  text-align: left;
}

.c2:focus {
  outline: none;
}

.c1 {
  background-color: #FFFFFF;
  box-sizing: border-box;
}

.c0 {
  border-collapse: collapse;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  margin-left: 50%;
  min-width: var(--size-2halfx);
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: var(--size-2halfx);
}

<table
  class="c0"
>
  <thead>
    <tr
      class=""
    >
      <th
        aria-sort="ascending"
        class="c1"
        scope="col"
        style="text-align:left"
      >
        <button
          class="c2 cursor-pointer select-none"
        >
          Column 1
          <svg
            color="#60666E"
            focusable="false"
            height="16"
            width="16"
          />
        </button>
      </th>
      <th
        aria-sort="none"
        class="c1"
        scope="col"
        style="text-align:left"
      >
        <button
          class="c2 cursor-pointer select-none"
        >
          Column 2
          <svg
            color="#60666E"
            focusable="false"
            height="16"
            width="16"
          />
        </button>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      class="c3"
      data-testid="table-row-0"
    >
      <td
        class=""
        style="text-align:left"
      >
        Hello
      </td>
      <td
        class=""
        style="text-align:left"
      >
        World
      </td>
    </tr>
    <tr
      class="c3"
      data-testid="table-row-1"
    >
      <td
        class=""
        style="text-align:left"
      >
        Hello
      </td>
      <td
        class=""
        style="text-align:left"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c3"
      data-testid="table-row-2"
    >
      <td
        class=""
        style="text-align:left"
      >
        Hello
      </td>
      <td
        class=""
        style="text-align:left"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has sticky column styles 1`] = `
.c4 {
  border-top: 1px solid #DBDEE1;
  background-color: #FFFFFF;
}

.c4 td {
  background-color: inherit;
}

.c5 {
  left: 0px;
  position: -webkit-sticky;
  position: sticky;
  z-index: 2;
}

.c6 {
  left: 75px;
  position: -webkit-sticky;
  position: sticky;
  z-index: 2;
}

.c1 {
  background-color: #FFFFFF;
  box-sizing: border-box;
  left: 0px;
  position: -webkit-sticky;
  position: sticky;
  z-index: 5;
}

.c2 {
  background-color: #FFFFFF;
  box-sizing: border-box;
  left: 75px;
  position: -webkit-sticky;
  position: sticky;
  z-index: 5;
}

.c3 {
  background-color: #FFFFFF;
  box-sizing: border-box;
}

.c0 {
  border-collapse: collapse;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  margin-left: 50%;
  min-width: var(--size-2halfx);
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: var(--size-2halfx);
}

<table
  class="c0"
>
  <thead>
    <tr
      class=""
    >
      <th
        class="c1"
        scope="col"
        style="text-align:left"
      >
        Column 1
      </th>
      <th
        class="c2"
        scope="col"
        style="text-align:left"
      >
        Column 2
      </th>
      <th
        class="c3"
        scope="col"
        style="text-align:left"
      >
        Column 3
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      class="c4"
      data-testid="table-row-0"
    >
      <td
        class="c5"
        style="text-align:left"
      >
        Hello
      </td>
      <td
        class="c6"
        style="text-align:left"
      >
        Big
      </td>
      <td
        class=""
        style="text-align:left"
      >
        World
      </td>
    </tr>
    <tr
      class="c4"
      data-testid="table-row-1"
    >
      <td
        class="c5"
        style="text-align:left"
      >
        Hello
      </td>
      <td
        class="c6"
        style="text-align:left"
      >
        Big
      </td>
      <td
        class=""
        style="text-align:left"
      >
        World
      </td>
    </tr>
    <tr
      class="c4"
      data-testid="table-row-2"
    >
      <td
        class="c5"
        style="text-align:left"
      >
        Hello
      </td>
      <td
        class="c6"
        style="text-align:left"
      >
        Big
      </td>
      <td
        class=""
        style="text-align:left"
      >
        World
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has sticky header styles 1`] = `
.c3 {
  border-top: 1px solid #DBDEE1;
  background-color: #FFFFFF;
}

.c3 td {
  background-color: inherit;
}

.c2 {
  background-color: #FFFFFF;
  box-sizing: border-box;
}

.c1 {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 6;
}

.c0 {
  border-collapse: collapse;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  margin-left: 50%;
  min-width: var(--size-2halfx);
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: var(--size-2halfx);
}

<table
  class="c0"
>
  <thead>
    <tr
      class="c1"
    >
      <th
        class="c2"
        scope="col"
        style="text-align:left"
      >
        Column 1
      </th>
      <th
        class="c2"
        scope="col"
        style="text-align:left"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      class="c3"
      data-testid="table-row-0"
    >
      <td
        class=""
        style="text-align:left"
      >
        Hello
      </td>
      <td
        class=""
        style="text-align:left"
      >
        World
      </td>
    </tr>
    <tr
      class="c3"
      data-testid="table-row-1"
    >
      <td
        class=""
        style="text-align:left"
      >
        Hello
      </td>
      <td
        class=""
        style="text-align:left"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c3"
      data-testid="table-row-2"
    >
      <td
        class=""
        style="text-align:left"
      >
        Hello
      </td>
      <td
        class=""
        style="text-align:left"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has striped styles 1`] = `
.c2 {
  border-top: 1px solid #DBDEE1;
  background-color: #FFFFFF;
}

.c2:nth-child(odd) {
  background-color: #FAFAFA;
}

.c2 td {
  background-color: inherit;
}

.c1 {
  background-color: #FFFFFF;
  box-sizing: border-box;
}

.c0 {
  border-collapse: collapse;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  margin-left: 50%;
  min-width: var(--size-2halfx);
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: var(--size-2halfx);
}

<table
  class="c0"
>
  <thead>
    <tr
      class=""
    >
      <th
        class="c1"
        scope="col"
        style="text-align:left"
      >
        Column 1
      </th>
      <th
        class="c1"
        scope="col"
        style="text-align:left"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      class="c2"
      data-testid="table-row-0"
    >
      <td
        class=""
        style="text-align:left"
      >
        Hello
      </td>
      <td
        class=""
        style="text-align:left"
      >
        World
      </td>
    </tr>
    <tr
      class="c2"
      data-testid="table-row-1"
    >
      <td
        class=""
        style="text-align:left"
      >
        Hello
      </td>
      <td
        class=""
        style="text-align:left"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c2"
      data-testid="table-row-2"
    >
      <td
        class=""
        style="text-align:left"
      >
        Hello
      </td>
      <td
        class=""
        style="text-align:left"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has tablet styles 1`] = `
.c2 {
  border-top: 1px solid #DBDEE1;
  background-color: #FFFFFF;
}

.c2 td {
  background-color: inherit;
}

.c1 {
  background-color: #FFFFFF;
  box-sizing: border-box;
}

.c0 {
  border-collapse: collapse;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-2x) var(--spacing-1x);
}

.c0 td {
  padding: var(--spacing-3x) var(--spacing-1x);
}

.c0 th,
.c0 td {
  font-size: 1rem;
  line-height: 1.5rem;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  margin-left: 50%;
  min-width: var(--size-2halfx);
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: var(--size-2halfx);
}

<table
  class="c0"
>
  <thead>
    <tr
      class=""
    >
      <th
        class="c1"
        scope="col"
        style="text-align:left"
      >
        Column 1
      </th>
      <th
        class="c1"
        scope="col"
        style="text-align:left"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      class="c2"
      data-testid="table-row-0"
    >
      <td
        class=""
        style="text-align:left"
      >
        Hello
      </td>
      <td
        class=""
        style="text-align:left"
      >
        World
      </td>
    </tr>
    <tr
      class="c2"
      data-testid="table-row-1"
    >
      <td
        class=""
        style="text-align:left"
      >
        Hello
      </td>
      <td
        class=""
        style="text-align:left"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c2"
      data-testid="table-row-2"
    >
      <td
        class=""
        style="text-align:left"
      >
        Hello
      </td>
      <td
        class=""
        style="text-align:left"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;
